--- a/Movie list/client/src/components/catalog/Catalog.module.css
+++ b/Movie list/client/src/components/catalog/Catalog.module.css
@@ -106,6 +106,7 @@
     height: 300px;
     width: 300px;
     border-radius: 15px;
+    object-fit: cover;
 }
 
 .catalogContent section article button {
